   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/markdown.c, tagmanager/Makefile.am, wscript:
   Add Markdown filetype (patch by Jon Strait, thanks).
 * src/pluginprivate.h, src/pluginutils.c, src/plugins.c:
   Fix disconnecting plugin signal id when not using geany_object.


2009-07-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginprivate.h, src/utils.h, src/plugindata.h,
   src/stash.c, src/pluginutils.c, src/plugins.c, src/pluginutils.h,
   doc/pluginsymbols.c, doc/plugins.dox, plugins/geanyfunctions.h,
   plugins/filebrowser.c:
   Add plugin_signal_connect() for connecting plugin signals at
   runtime and also for connecting to any GObject signal.
   Add 'Plugin Utility Functions' on main page.
   Add foreach_array() macro.
 * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
   src/document.c, src/editor.c:
   Rename 3 sci functions to sci_set_target_start(),
   sci_set_target_end(), sci_replace_target() to match the SCI_
   message name.


2009-07-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * wscript: Fix compiling error with waf.


2009-07-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginprivate.h, src/makefile.win32, src/plugindata.h,
   src/pluginutils.c, src/plugins.c, src/pluginutils.h,
   src/Makefile.am, wscript:
   Move plugin_* utility functions to pluginutils.c.
   Add pluginprivate.h.
 * src/editor.c:
   Fix reshowing calltip in the wrong document.


2009-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add some general information about auto-completion capabilities
   (patch by Lex Trotman, thanks).


2009-07-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/LINGUAS, po/sl_SI.po, THANKS, src/about.c:
   Added a first Slovenian translation. Thanks to Joze Klepec.


2009-07-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
